--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
   margin-right: auto;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, 'Roboto', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+body{overflow: hidden;}
 header{padding: .5rem}
 section{padding: .5rem}
 footer{padding: .5rem}
@@ -47,7 +48,7 @@ footer{padding: .5rem}
 .dark-theme li .nodejs{color:#448942;}
 .dark-theme li .pyt{color: #3c78a9;} .dark-theme li .hon{color: #e0c145;}
 .dark-theme li .flask{color: #f1f1f1;}
-.dark-theme li .vs{color:#007bcd;}
+.dark-theme li .vs{color:#0066b8;}
 
 
 /* text styling */
@@ -66,8 +67,7 @@ ul{
   list-style-type: none;
   margin: 0;
   padding: 0;
-  width: 90%;
-
+  max-width: 90%;
 }
 li{
   font-family: Georgia, 'Times New Roman', Times, serif;
@@ -81,20 +81,58 @@ li{
 }
 
 .theme-button{
+  transition: transform 2s;
   z-index: 1;
   position: absolute;
   bottom: 0;
   right: 0;
-  height: 50px;
-  width: 50px;
+  height: 65px;
+  width: 65px;
   margin: 0 1rem 1rem 0;
   border-radius: 50%;
+  font-size: 11pt;
 }
 
-
-
-
-
+/* Animations */
+.anim-enlarge{
+  transform: scale(40);
+  transition: transform .5s;
+}
+/*#button-anim{opacity: 0;}*/
+.anim-dark-to-light{animation-name: dark-to-light; animation-duration: .5s; }
+.anim-light-to-dark{animation-name: light-to-dark; animation-duration: .5s; }
+.anim-fade-in{animation-name: fade-in; animation-duration: .5s; }
+.anim-fade-out{animation-name: fade-out; animation-duration: .5s; }
+@keyframes dark-to-light {
+  0% { background-color: #f1f1f1; }
+  25% { background-color: rgb(204, 204, 204); }
+  50% { background-color: rgb(105, 105, 105); }
+  75% { background-color: rgb(27, 27, 27);}
+  100% { background-color: #333333;; }
+}
+@keyframes light-to-dark{
+  100% { background-color: #f1f1f1; }
+  75% { background-color: rgb(204, 204, 204); }
+  50% { background-color: rgb(105, 105, 105); }
+  25% { background-color: rgb(27, 27, 27);}
+  0% { background-color: #333333;; }
+}
+@keyframes fade-in {
+  0% { opacity: 0; }
+  20% { opacity: 0; }
+  40% { opacity: 0.3; }
+  60% { opacity: 0.5; }
+  80% { opacity: 0.9; }
+  100% { opacity: 1; }
+}
+@keyframes fade-out {
+  0% { opacity: 1; }
+  20% { opacity: 0.9; }
+  40% { opacity: 0.5; }
+  60% { opacity: 0.3; }
+  80% { opacity: 0; }
+  100% { opacity: 0; }
+}
 
 
 
@@ -119,6 +157,20 @@ footer p{margin: 0;}
 @media (min-width:1281px)  {
   .container{
     width: 80%;
+  }
+  ul{
+    display: inline-flex;
+    flex-wrap: wrap;
+    border-radius: 4px;
+    justify-content: center;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+  .theme-button{margin-right: 12%;}
+  .anim-enlarge{
+    transform: scale(60);
+    transition: transform 1s;
   }
 }
 
