--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@
   margin-left: auto;
   margin-right: auto;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, 'Roboto', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  overflow-y: hidden;
 }
 body{overflow-x: hidden;}
 header{padding: .5rem}
@@ -23,6 +22,9 @@ footer{padding: .5rem}
 .light-theme hr{width: 80%; color: rgba(249, 249, 249, 0.288);}
 .light-theme li{color:#DF164F;}
 .light-theme li a{color:#DF164F;}
+.light-theme .card{
+  border: 1px solid rgba(51, 51, 51, 0.24);
+}
   /* might implement bottom recolor */
   /* 
   .light-theme ul {background: rgb(87, 85, 85);}
@@ -54,7 +56,12 @@ footer{padding: .5rem}
 .dark-theme li .pyt{color: #3c78a9;} .dark-theme li .hon{color: #e0c145;}
 .dark-theme li .flask{color: #f1f1f1;}
 .dark-theme li .vs{color:#0066b8;}
-
+.dark-theme .card{
+  background: rgba(112, 126, 206, 0.103);
+  border: 1px solid rgba(51, 51, 51, 0.24);
+  -webkit-box-shadow: 0px 0px 7px 1px rgba(0, 0, 0, 0.123); 
+  box-shadow: 0px 0px 7px 1px rgba(0, 0, 0, 0.123);
+}
 
 /* text styling */
 .thinner-font{font-weight: 400;}
@@ -81,16 +88,32 @@ li{
 }
 
 /* card */
+  /* placeholder colours should be kept for dark-theme. */
 .card{
-  display: flex;
+  display: inline-flex;
+  align-content: center;
   flex-direction: column;
   width: 90%;
+  padding: .2rem .5rem;
+  text-align: left;
 }
+.card .under-title{
+  font-size: 10pt;
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+  justify-content: space-between;
+}
+.under-title a{
+}
+.card h3{font-weight: 400; margin-bottom: 0;}
+
+
 
 .theme-button{
   transition: transform 2s;
   z-index: 1;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   right: 0;
   height: 65px;
@@ -101,7 +124,7 @@ li{
 }
 #time{
   padding: .2rem;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
   margin: 0 0 1rem 1rem;
@@ -149,20 +172,11 @@ li{
   100% { opacity: 0; }
 }
 
-
-
-
-
-
-
 /* Footer */
 footer{
   padding: 1rem;
 }
 footer p{margin: 0;}
-
-
-
 
 
 
@@ -172,6 +186,16 @@ footer p{margin: 0;}
 @media (min-width:1281px)  {
   .container{
     width: 80%;
+  }
+  .card{
+    display: inline-flex;
+    width: 320px;
+    height: 450px;
+    margin: .5rem;
+  }
+  .card img{
+    width: 100%;
+    height: 300px;
   }
   ul{
     display: inline-flex;
@@ -191,11 +215,8 @@ footer p{margin: 0;}
     height: 25px;
     left: unset;
     right: 0;
-    margin-right: 12%; 
+    margin-right: 11.5%; 
     margin-bottom: 2%;
   }
 }
 
-/* ----------------
-        Testing
-   ---------------- */
