--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,10 @@ footer{padding: .5rem}
   -webkit-box-shadow: 0px 0px 7px 1px rgba(0, 0, 0, 0.123); 
   box-shadow: 0px 0px 7px 1px rgba(0, 0, 0, 0.123);
 }
+.dark-theme .card a{color: #f9f9f9;}
+.dark-theme .card img{filter: contrast(80%) ;}
+.dark-theme .under-title a{color:  #1579A8;}
+.dark-theme .under-title p{color: rgba(255, 255, 255, 0.705);}
 
 /* text styling */
 .thinner-font{font-weight: 400;}
@@ -70,7 +74,6 @@ h2{font-weight: 500; font-size: 17pt; margin: .5rem 0;}
 .section-info{opacity: .5; font-size: 11pt;}
 p{margin: .5rem 0;}
 a{text-decoration: none;}
-
 ul{
   display: inline-flex;
   flex-wrap: wrap;
@@ -104,10 +107,8 @@ li{
   align-items: baseline;
   justify-content: space-between;
 }
-.under-title a{
-}
 .card h3{font-weight: 400; margin-bottom: 0;}
-
+.card img {display: none;}
 
 
 .theme-button{
@@ -194,7 +195,8 @@ footer p{margin: 0;}
     margin: .5rem;
   }
   .card img{
-    width: 100%;
+    display: flex;
+    width: auto;
     height: 300px;
   }
   ul{
